<resources>
    <string name="app_name">Fantoo</string>
    <string name="Home">홈</string>
    <string name="Community">커뮤니티</string>
    <string name="Club">클럽</string>
    <string name="Menu">메뉴</string>
    <string name="MY">MY</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="g_open_public">공개</string>
    <string name="b_hidden">비공개</string>
    <string name="j_auto">자동</string>
    <string name="s_approval">승인</string>
    <string name="d_next">다음</string>
    <string name="a_done">완료</string>
    <string name="h_confirm">"확인"</string>
    <string name="s_setting">"설정"</string>
    <string name="n_nickname">"닉네임"</string>
    <string name="j_all">"전체"</string>
    <string name="c_cancel">"취소"</string>
    <string name="g_rejection">거절</string>
    <string name="h_allow">허용</string>
    <string name="g_prohibition">금지</string>
    <string name="a_general">"일반"</string>
    <string name="s_delete">"삭제"</string>
    <string name="a_maintain">"유지"</string>
    <string name="a_no">아니오</string>
    <string name="a_yes">예</string>
    <string name="s_term_use_service">"서비스 이용약관"</string>
    <string name="g_term_privacy_info">"개인정보 취급방침"</string>
    <string name="c_term_youth">"청소년 보호정책"</string>
    <string name="se_s_including_cannot_use_char">"사용할 수 없는 문자가 포함되어 있습니다."</string>
    <string name="se_a_already_use_nickname">"이미 사용중인 닉네임 입니다."</string>
    <string name="se_s_can_use_nickname">"사용가능한 닉네임입니다."</string>
    <string name="se_n_change_nickname_notice_1">"닉네임은 %s일에 한번 변경 가능합니다. %s에 다시 변경하실 수 있습니다."</string>
    <string name="d_registration">등록</string>
    <string name="j_wrote_post">"작성 글"</string>
    <string name="j_wrote_rely">"작성 댓글"</string>
    <string name="g_select_country">국적 선택</string>
    <string name="comment">댓글</string>
    <string name="error_code_2000">로그인 후 이용 가능한 기능입니다.</string>
    <string name="Error_C1000">댓글 정보가 잘 못 되었습니다. 다시 시도해 주세요.</string>
    <string name="error_code_2001">잠시 후 다시 시도해 주세요.</string>
    <string name="error_code_2002">로그인 후 이용 가능합니다.</string>
    <string name="Error_8001">번역 중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="Error_FE1000">해당 유저가 존재하지 않습니다.</string>
    <string name="Error_FE1001">휴면계정 입니다.\n휴면 해제후 다시 시도하세요.</string>
    <string name="Error_FE1002">이미 추천인 코드 발급되었습니다.</string>
    <string name="Error_FE1003">이미 추천인 코드 입력하셨습니다.</string>
    <string name="Error_FE1004">추천인 코드를 잘못 입력하셨습니다.</string>
    <string name="Error_FE1005">비 정상적 접근입니다.</string>
    <string name="Error_FE1006">ID가 이미 존재합니다.</string>
    <string name="Error_FE1007">닉네임이 이미 존재합니다.</string>
    <string name="Error_FE1008">탈퇴 계정입니다.</string>
    <string name="Error_FE1009">닉네임은 30일에 한번씩만 변경할 수 있습니다.</string>
    <string name="Error_FE1010">3개월 이전의 정보는 불러올 수 없습니다.</string>
    <string name="Error_FE1011">로그인ID(Email) 입력해주세요.</string>
    <string name="Error_FE1012">로그인ID(SNS / Email) 입력해주세요.</string>
    <string name="Error_FE1013">integUid 입력해주세요.</string>
    <string name="Error_FE1014">비밀번호 입력해주세요.</string>
    <string name="Error_FE1015">비밀번호는 영문(대소문자 구분), 숫자, 특수기호가 적어도 1개 이상씩 포함된 8자 ~ 20자의 비밀번호여야 합니다.</string>
    <string name="Error_FE1016">referralCode 입력해주세요.</string>
    <string name="Error_FE1017">추천인 코드는 영문 대문자, 숫자로 이루어진 10자리 입니다.</string>
    <string name="Error_FE1018">targetIntegUid 입력해주세요.</string>
    <string name="Error_FE1019">서비스 이용약관 동의(필수)를 입력해주세요.</string>
    <string name="Error_FE1020">개인정보 취급방침 동의(필수).</string>
    <string name="Error_FE1021">청소년 보호정책 동의(필수).</string>
    <string name="Error_FE1022">만 14세 이상입니다(필수).</string>
    <string name="Error_FE1023">이벤트(광고성) 정보 수신 동의(선택).</string>
    <string name="Error_FE1024">Email 형식을 맞춰주세요.</string>
    <string name="Error_FE1025">Email 입력해주세요.</string>
    <string name="Error_FE1026">추천인 코드는 영문 대문자, 숫자로 이루어진 10자리 입니다.</string>
    <string name="Error_FE1027">ISO2, 국가 코드 영문 대문자 2자리를 입력해주세요.</string>
    <string name="Error_FE1028">국가 코드 2자리 입력해주세요.</string>
    <string name="Error_FE1029">닉네임 2~20자리.</string>
    <string name="Error_FE1030">닉네임 입력해주세요.</string>
    <string name="Error_FE1031">생일 Format은 yyyy-mm-dd 입니다.</string>
    <string name="Error_FE1032">관심사는 3개 까지만 선택 가능합니다.</string>
    <string name="Error_FE1033">SNS 로그인ID 입력해주세요.</string>
    <string name="Error_FE1034">loginType을 입력해주세요.</string>
    <string name="Error_FE2000">커뮤니티 카테고리 code 존재하지 않습니다.</string>
    <string name="Error_FE2001">커뮤니티 카테고리 subCode 누락 되었습니다.</string>
    <string name="Error_FE2002">커뮤니티 댓글에는 동영상 첨부할수없습니다.</string>
    <string name="Error_FE2003">code not found</string>
    <string name="Error_FE2004">post not found</string>
    <string name="Error_FE2005">게시글 작성자가 아닙니다.</string>
    <string name="Error_FE2006">post not reply</string>
    <string name="Error_FE2007">본인 게시글에 댓글작성시 익명여부 동일 해야합니다.</string>
    <string name="Error_FE2008">삭제/숨김 처리된 댓글에는 대댓글 추가가 불가합니다.</string>
    <string name="Error_FE2009">본인 게시글에 댓글작성시 익명여부 동일 해야합니다.</string>
    <string name="Error_FE2010">post or reply not found</string>
    <string name="Error_FE2011">좋아요, 싫어요 해제할 데이터가 없습니다.</string>
    <string name="Error_FE2012">open Graph를 가져올 수 없습니다.</string>
    <string name="Error_FE2013">size 5 ~ 30 제한 입니다.</string>
    <string name="Error_FE2014">size 5 ~ 100 제한 입니다.</string>
    <string name="Error_FE2015">검색어 2글자 이상 입력하세요.</string>
    <string name="Error_FE2016">postId 확인해주세요.</string>
    <string name="Error_FE2017">Category code, 1 Depth 코드 입력해주세요.</string>
    <string name="Error_FE2018">targetId 입력해주세요.</string>
    <string name="Error_FE2019">title 입력해주세요.</string>
    <string name="Error_FE2020">content 입력해주세요.</string>
    <string name="Error_FE2021">익명여부를 입력해주세요.</string>
    <string name="Error_FE2022">해시태그는 최대 10개만 입력 가능합니다</string>
    <string name="Error_FE2023">해시태그명 2~15자리.</string>
    <string name="Error_FE2025">이미 신고한 글 입니다.</string>
    <string name="Error_FE2824">service type을 확인해주세요.</string>
    <string name="Error_FE2825">device type을 확인해주세요.</string>
    <string name="Error_FE2826">""</string>
    <string name="Error_FE2827">enable 확인해주세요.</string>
    <string name="Error_FE2828">endDate 확인해주세요.</string>
    <string name="Error_FE2829">messageEng 확인해주세요.</string>
    <string name="Error_FE2830">messageKr 확인해주세요.</string>
    <string name="Error_FE2831">startDate 확인해주세요.</string>
    <string name="Error_FE2832">apiUrl 확인해주세요.</string>
    <string name="Error_FE2833">imageUrl 확인해주세요.</string>
    <string name="Error_FE2834">transUrl 확인해주세요.</string>
    <string name="Error_FE2835">webUrl 확인해주세요.</string>
    <string name="Error_FE2836">adUrl 확인해주세요.</string>
    <string name="Error_FE2837">payUrl 확인해주세요.</string>
    <string name="Error_FE2838">currentVersion 확인해주세요.</string>
    <string name="Error_FE2839">forceUpdate 확인해주세요.</string>
    <string name="Error_FE2840">updateEnable 확인해주세요.</string>
    <string name="Error_FE3000">클럽 멤버 가입후 이용 가능합니다.</string>
    <string name="Error_FE3001">비공개 클럽은 멤버 가입후 이용 가능합니다.</string>
    <string name="Error_FE3002">비공개 멤버 리스트는 볼 수 없습니다.</string>
    <string name="Error_FE3003">클럽명은 이미 사용중 입니다.</string>
    <string name="Error_FE3004">클럽 관리자만 사용 가능힙니다.</string>
    <string name="Error_FE3005">클럽이 존재하지 않습니다.</string>
    <string name="Error_FE3006">이미 가입된 클럽입니다.</string>
    <string name="Error_FE3007">이미 가입 요청한 클럽입니다.</string>
    <string name="Error_FE3008">멤버 정보가 없습니다.</string>
    <string name="Error_FE3009">동일한 닉네임이 존재합니다.</string>
    <string name="Error_FE3010">닉네임이 없습니다.</string>
    <string name="Error_FE3011">클럽장은 탈퇴할 수 없습니다.</string>
    <string name="Error_FE3012">2명이상의 클럽은 폐쇄할 수 업습니다.</string>
    <string name="Error_FE3013">이미 폐쇄 진행 중입니다</string>
    <string name="Error_FE3014">해당 클럽은 폐쇄되었습니다.</string>
    <string name="Error_FE3015">"%s일에 한번 변경 가능합니다."</string>
    <string name="Error_FE3016">중복체크를 하지 않았습니다.</string>
    <string name="Error_FE3017">해당 클럽은 멤버 리스트를 볼 수 없습니다.</string>
    <string name="Error_FE3018">수정할 데이터가 없습니다.</string>
    <string name="Error_FE3019">폐쇄보류 중에는 사용할 수 없습니다.</string>
    <string name="Error_FE3020">클럽명을 입력하세요.</string>
    <string name="Error_FE3021">클럽명은 2-20자만 가능합니다.</string>
    <string name="Error_FE3022">클럽 공개 여부를 선택하세요. (true/false)</string>
    <string name="Error_FE3023">클럽 관심사 카테고리를 선택하세요.</string>
    <string name="Error_FE3024">클럽 언어를 선택하세요.</string>
    <string name="Error_FE3025">클럽 활동 국가를 선택하세요.</string>
    <string name="Error_FE3026">클럽 멤버 자동 가입 여부를 선택하세요. (true/false)</string>
    <string name="Error_FE3027">토큰을 입력하세요.</string>
    <string name="Error_FE3028">클럽 소개글은 2-100자만 가능합니다.</string>
    <string name="Error_FE3029">좋아요, 싫어요 타입을 입력하세요.</string>
    <string name="Error_FE3030">닉네임을 입력하세요.</string>
    <string name="Error_FE3031">닉네임은 2-20자만 사용가능합니다.</string>
    <string name="Error_FE3032">클럽 ID 입력해주세요.</string>
    <string name="Error_FE3033">클럽 카테고리명을 입력해주세요.</string>
    <string name="Error_FE3034">카테고리 코드는 숫자만 입력 가능합니다.</string>
    <string name="Error_FE3035">클럽 멤버 아이디 입력해주세요.</string>
    <string name="Error_FE3036">클럽 카테고리 코드 입력해주세요.</string>
    <string name="Error_FE3037">클럽 게시글 ID 입력해주세요.</string>
    <string name="Error_FE3038">클럽 댓글 ID 입력해주세요.</string>
    <string name="Error_FE3039">클럽 부모 댓글 ID 입력해주세요.</string>
    <string name="Error_FE3040">클럽 대댓글 ID 입력해주세요.</string>
    <string name="Error_FE3041">keyword 입력해주세요.</string>
    <string name="Error_FE3042">미디어 타입이 없습니다.</string>
    <string name="Error_FE3043">이미지, 동영상의 클라우드 키가 없습니다.</string>
    <string name="Error_FE3044">제목을 입력해주세요.</string>
    <string name="Error_FE3045">내용을 입력해주세요.</string>
    <string name="Error_FE3046">번역 언어 코드값이 없습니다.</string>
    <string name="a_write_email">이메일 입력</string>
    <string name="a_join_email">이메일로 회원가입</string>
    <string name="se_d_recieve_cert_number">"※ '다음'을 누르시면, 입력한 이메일로 인증번호가 전송됩니다."</string>
    <string name="se_a_login_already_registered">"※ 이미 회원가입을 하신 경우 로그인 해주세요."</string>
    <string name="se_a_incorrect_email_format">"이메일 형식이 올바르지 않습니다."</string>
    <string name="k_club_leave">"클럽 탈퇴"</string>
    <string name="se_j_really_leave">"정말 탈퇴하시겠습니까?"</string>
    <string name="se_n_delete_my_profile_info">"내 프로필 정보 삭제"</string>
    <string name="se_b_delete_storage_history">"보관함 - 저장, 이용 이력 삭제"</string>
    <string name="n_keep_my_post_2">"내 작성글(게시글, 첨부파일, 댓글, 대댓글 등) 유지"</string>
    <string name="se_j_agree_delete_retention_info">"정보 삭제 및 유지에 동의합니다."</string>
    <string name="m_summary">"말머리"</string>
    <string name="m_summary_setting">"말머리 세팅"</string>
    <string name="k_close_delete_club">"클럽 폐쇄/위임"</string>
    <string name="se_m_write_headline_space">"말머리 입력 후 띄어쓰기 (최대 10개)"</string>
    <string name="k_cancel_close_club">"클럽 폐쇄 취소하기"</string>
    <string name="se_k_club_closure">"클럽 폐쇄 신청 상태입니다"</string>
    <string name="se_k_hold_period">"· 클럽 폐쇄 후 7일간의 보류 기간이 주어집니다."</string>
    <string name="se_b_notice_pending_period_1">"· 보류 기간 중에는 게시글 보기만 가능합니다."</string>
    <string name="se_b_notice_pending_period_2">"· 보류 기간 중에는 클럽 페쇄를 취소하실 수 있습니다."</string>
    <string name="se_p_delete_all_club_info">"· 폐쇄 후 7일 후에는 클럽의 모든 정보가 삭제됩니다."</string>
    <string name="k_close_club">"클럽 폐쇄하기"</string>
    <string name="m_summury_warning_guide">"[말머리 생성/삭제 주의사항]"</string>
    <string name="se_s_summury_guide1">"· 생성된 말머리는 수정할 수 없으며, 말머리 간 순서 조정이 불가합니다."</string>
    <string name="se_g_summury_guide2">"· 기본 제공되는 말머리는 뉴스, 잡담, 질문, 기타 입니다."</string>
    <string name="se_g_summury_guide3">"· 기본 제공되는 말머리는 삭제할 수 없습니다."</string>
    <string name="se_m_summury_guide4">"· 말머리 삭제 시 해당 말머리가 붙어있는 모든 게시글에서 말머리가 지워집니다."</string>
    <string name="se_m_summury_guide5">"· 말머리가 삭제된 글들은 클럽 게시글 검색 또는 자유게시판의 '전체' 선택 시에만 확인할 수 있습니다."</string>
    <string name="j_save">저장</string>
    <string name="se_t_check_info_when_withdraw">탈퇴 시 삭제/유지되는 정보를 확인해주세요.\n한번 삭제된 정보는 복구가 불가능합니다.</string>
    <string name="h_home">홈</string>
    <string name="c_chatting">채팅</string>
</resources>