<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/menu_menu_icon_selector"
        android:title="@string/Menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/menu_home_icon_selector"
        android:title="@string/h_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/community"
        android:enabled="true"
        android:icon="@drawable/menu_community_icon_selector"
        android:title="@string/Community"
        app:showAsAction="always" />
    <item
        android:id="@+id/club"
        android:enabled="true"
        android:icon="@drawable/menu_club_icon_selector"
        android:title="@string/Club"
        app:showAsAction="always" />
    <item
        android:id="@+id/chatting"
        android:enabled="true"
        android:icon="@drawable/menu_chat_icon_selector"
        android:title="@string/c_chatting"
        app:showAsAction="ifRoom" />
</menu>