<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_25">

    <com.rndeep.fns_fantoo.ui.common.viewgroup.CommonTopbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tailText="@string/j_save"
        app:tailTextColor="@color/state_enable_primary_default"
        app:titleText="@string/m_summary_setting" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="20dp"
        android:text="@string/m_summary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:addStatesFromChildren="true"
        app:endIconDrawable="@drawable/icon_input_delete"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWord"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_field_selector"
            android:hint="@string/se_m_write_headline_space"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColorHint="@color/gray_400" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/inputLayout" />

    <TextView
        android:id="@+id/tvGuideTitle"
        style="@style/Caption21116Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/m_summury_warning_guide"
        android:textColor="@color/state_danger"
        app:layout_constraintTop_toBottomOf="@id/rvWords" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvGuideTitle">

        <TextView
            android:id="@+id/tvGuide1"
            style="@style/Caption21116Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_s_summury_guide1"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGuide2"
            style="@style/Caption21116Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_g_summury_guide2"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGuide1" />

        <TextView
            android:id="@+id/tvGuide3"
            style="@style/Caption21116Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_g_summury_guide3"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGuide2" />

        <TextView
            android:id="@+id/tvGuide4"
            style="@style/Caption21116Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_m_summury_guide4"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGuide3" />

        <TextView
            android:id="@+id/tvGuide5"
            style="@style/Caption21116Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_m_summury_guide5"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGuide4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
