<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <com.rndeep.fns_fantoo.ui.common.viewgroup.CommonTopbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/k_club_leave"
        app:backButtonImageResource="@drawable/icon_outline_cancel"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="20dp"
        style="@style/Title32028Bold"
        android:textColor="@color/gray_900"
        android:text="@string/se_j_really_leave"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        style="@style/Body21420Regular"
        android:textColor="@color/gray_850"
        android:text="@string/se_t_check_info_when_withdraw"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:background="@drawable/bg_border_radius_16_c_bg_light_grey50"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Buttons1420Medium"
            android:textColor="@color/gray_900"
            android:text="@string/s_delete"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Caption11218Regular"
            android:textColor="@color/gray_700"
            android:text="@string/se_n_delete_my_profile_info"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Caption11218Regular"
            android:textColor="@color/gray_700"
            android:text="@string/se_b_delete_storage_history"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Buttons1420Medium"
            android:textColor="@color/gray_900"
            android:text="@string/a_maintain"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Caption11218Regular"
            android:textColor="@color/gray_700"
            android:text="@string/n_keep_my_post_2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResignAgree"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintBottom_toTopOf="@id/btnClubResign"
        android:layout_marginBottom="26dp"
        android:orientation="horizontal"
        >
        <CheckBox
            android:id="@+id/cbResignAgree"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="22dp"
            android:background="@drawable/round_checkbox_selector"
            android:button="@null"
            android:clickable="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            style="@style/Buttons1420Medium"
            android:textColor="@color/gray_870"
            android:text="@string/se_j_agree_delete_retention_info"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnClubResign"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button_blue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/k_club_leave"
        android:enabled="false"
        />

    <com.rndeep.fns_fantoo.ui.common.viewgroup.FantooLoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>