<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/ilTopbar"
        layout="@layout/topbar_layout" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Title41824Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/a_join_email"
        android:textColor="@color/gray_870"
        app:layout_constraintTop_toBottomOf="@id/ilTopbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        app:endIconDrawable="@drawable/icon_input_delete"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/input_field_selector"
            android:hint="@string/a_write_email"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_input_tail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <TextView
            style="@style/Caption11218Regular"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:text="@string/se_d_recieve_cert_number"
            android:textColor="@color/gray_500" />

        <TextView
            android:id="@+id/tvEmailInputTail"
            style="@style/Caption11218Regular"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:text="@string/se_a_login_already_registered"
            android:textColor="@color/gray_500" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInvalidEmail"
        style="@style/Caption11218Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:text="@string/se_a_incorrect_email_format"
        android:textColor="@color/state_danger"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <Button
        android:id="@+id/btnNext"
        style="@style/button_blue"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/d_next"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.rndeep.fns_fantoo.ui.common.viewgroup.FantooLoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
